my-apps/media/reubah/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reubah
  namespace: reubah
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reubah
  template:
    metadata:
      labels:
        app: reubah
    spec:
      containers:
        - name: reubah
          image: ghcr.io/dendianugerah/reubah:sha-57218f6
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: doc-temp
              mountPath: /tmp
      volumes:
        - name: doc-temp
          persistentVolumeClaim:
            claimName: reubah-doc-temp-pvc
