my-apps/media/reubah/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reubah
  namespace: reubah
  labels:
    app: reubah
spec:
  selector:
    app: reubah
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  type: ClusterIP
