my-apps/media/reubah/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reubah-route
  namespace: reubah
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "convert.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: reubah
          port: 8081
